--- a/InventorPartMakerDA2/InventorPartMakerDA2Plugin/InventorPartMakerDA2Plugin.csproj
+++ b/InventorPartMakerDA2/InventorPartMakerDA2Plugin/InventorPartMakerDA2Plugin.csproj
@@ -56,6 +56,7 @@
     <Compile Include="SampleAutomation.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="react-test-output.xml" />
     <None Include="InventorPartMakerDA2Plugin.X.manifest" />
     <Content Include="PackageContents.xml" />
     <Content Include="InventorPartMakerDA2Plugin.Inventor.addin">
