--- a/InventorPartMakerDA2/Interaction/appsettings.json
+++ b/InventorPartMakerDA2/Interaction/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Forge": {
-    "ClientId": "!!! CHANGE ME !!!",
-    "ClientSecret": "!!! CHANGE ME !!!"
+    "ClientId": "zamT8weHPvbGS4dnRw0tWEYWKmdGUD21",
+    "ClientSecret": "pFPhiOvIplUWLaec"
   },
-  "PackagePathname": "..\\..\\..\\..\\..\\Output\\InventorPartMakerDA2Plugin.bundle.zip"
+  "PackagePathname": "..\\..\\..\\..\\Output\\InventorPartMakerDA2Plugin.bundle.zip"
 }
