--- a/InventorPartMakerDA2/Interaction/Interaction.csproj
+++ b/InventorPartMakerDA2/Interaction/Interaction.csproj
@@ -7,6 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autodesk.Forge" Version="1.7.0" />
+    <PackageReference Include="Autodesk.Forge.Core" Version="1.0.1" />
     <PackageReference Include="Autodesk.Forge.DesignAutomation" Version="3.0.0-beta4" />
   </ItemGroup>
 
